minor spacing fixes

--- a/resume/css/styles.css
+++ b/resume/css/styles.css
@@ -12,7 +12,7 @@
 
 b{
     font-family: "Apercu Pro";
-    font-weight: 100;
+    font-weight: 300;
     font-style: italic;
 }
 
